kubernetes/dev-env/manifests/consul-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consul
  namespace: smart-hire-ops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consul
  template:
    metadata:
      labels:
        app: consul
    spec:
      containers:
      - name: consul
        image: consul:1.15.4
        ports:
        - containerPort: 8500
        - containerPort: 8600
          protocol: UDP
        - containerPort: 8502
