kubernetes/dev-env/manifests/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: smart-hire-ops
spec:
  selector:
    app: api-gateway
  ports:
    - protocol: TCP
      port: 9999
      targetPort: 9999
