kubernetes/dev-env/manifests/consul-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: consul-ingress
  namespace: smart-hire-ops
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - consul.discovery.com
      secretName: urlbackendingresssecret
  rules:
  - host: consul.discovery.com  
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: consul
            port:
              number: 8500
